# QtOpenCV

./: .gitignore  CMakeLists.txt
include/: MainWindow.hpp  SampleClass.hpp
src/: MainWindow.cpp  SampleClass.cpp  main.cpp
